objects/data_sfga__c.object
<CustomObject>
    <fields>
        <fullName>Key_Word__c</fullName>
        <label>Keywords</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phrases__c</fullName>
        <label>Keyword Phrases</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Campaign_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Campaign</label>
        <referenceTo>data_sfga_camp__c</referenceTo>
        <relationshipLabel>data sfga</relationshipLabel>
        <relationshipName>data_sfga</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Ad__c</fullName>
        <label>Text Ad</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>Lead Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>deals_per_stage__c</fullName>
        <label># deals per stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_leads__c</fullName>
        <label># of leads</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>data sfga</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>data_sfga Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>data sfga</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>